<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile AI Explainability</string>
    
    <!-- Model Inspection Section -->
    <string name="inspection_header">Model Inspection</string>
    <string name="inspection_model_header">Select Model:</string>
    <string name="inspection_view_header">Select View:</string>
    <string name="generate_inspection">View Model</string>
    
    <!-- Explanation Section -->
    <string name="explanation_header">Explanations</string>
    <string name="model_header">Select Knowledge Model:</string>
    <string name="triple_header">Select Input Triple:</string>
    <string name="explanation_type_header">Select Explanation Type:</string>
    <string name="generate_explanation">Generate Explanation</string>

    <!-- Navigation strings -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>

    <!-- Triple Selection -->
    <string name="subject_header">Select Subject:</string>
    <string name="predicate_header">Select Predicate:</string>
    <string name="object_header">Select Object:</string>
</resources>
